# mech-inter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/agents/: experiment_designer.md  ml_researcher.md
.claude/ignore_commands/: analysis.md  code_reviewer.md  data.md  experiment.md  model.md
experiments/: activation_analysis_demo.py  attention_analysis_demo.py  colab_setup.ipynb
notebooks/: activation_analysis_tutorial.ipynb  attention_analysis_tutorial.ipynb  colab_setup.ipynb
src/: __init__.py  activation_extraction.py  activation_patching.py  attention_analysis.py  circuit_discovery.py  experiment_tracker.py  fact_dataset.py  sae_training.py  utils.py  visualization.py
