[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mech-inter"
version = "0.1.0"
description = "Mechanistic interpretability research toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["interpretability", "transformers", "machine-learning", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "einops>=0.7.0",
    "transformer-lens>=1.17.0",
    "circuitsvis>=1.43.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
    "plotly>=5.18.0",
    "altair>=5.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.4",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "notebook>=7.0.0",
    "wandb>=0.16.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]
sae = [
    "sae-lens>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mech-inter"
Documentation = "https://github.com/yourusername/mech-inter"
Repository = "https://github.com/yourusername/mech-inter"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "transformer_lens.*",
    "circuitsvis.*",
    "wandb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
